# flet-design-system

./: .flake8  .project-context.md  README.md  pyproject.toml
responsive_app_example/: README.md  index.html  main_flet.py  style.css
src/design_system/: __init__.py  main.py
src/design_system/bot/: __init__.py  client.py
src/design_system/components/: __init__.py  button.py  card.py  input.py  layout.py  toggle.py  typography.py
src/design_system/tokens/: __init__.py  manager.py  tokens.json
tests/: test_design_system.py  test_playwright.py
