[tool.poetry]
name = "flet-design-system"
version = "0.1.0"
description = "A comprehensive, token-driven Design System built with Flet and Python"
authors = ["OpenCode <prov@opencode.dev>"]
packages = [{include = "design_system", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "0.85.2"
pillow = "^12.2.0"
discord-py = ">=2.3.0"
google-generativeai = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
playwright = "*"
pytest-playwright = "*"
autopep8 = "*"
flake8 = "7.1.1"
flake8-docstrings = "1.7.0"
pydocstyle = "6.3.0"
snowballstemmer = "2.2.0"
pep8-naming = "0.13.3"
flake8-docstrings-complete = "1.3.0"
flake8-print = "5.0.0"
flake8-todo = "0.7"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
design-system = "design_system.main:main"
design-system-bot = "design_system.bot.client:start_bot"
